tests/diagnostics/negative/typeck/type_mismatch.vit
space vitte/tests/diagnostics/negative/type_mismatch

proc main() -> int {
  let total: i32 = 1
  set total = "wrong"
  give total
}
